# qt5-finger-guessing-game

./: CMakeLists.txt  README.md  jsb.cpp  jsb.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
